--- a/base.css
+++ b/base.css
@@ -140,18 +140,10 @@ footer {
   width: 100%;
   background-color: #1c1b1e;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   box-sizing: border-box;
+  flex-wrap: wrap;
   padding: 4% 8%;
-}
-
-footer > div {
-  padding-left: 60px;
-  padding-right: 60px;
-}
-
-footer > div:first-of-type {
-  padding-left: 0;
 }
 
 .footer-heading {
@@ -172,4 +164,19 @@ footer > div:first-of-type {
   text-transform: uppercase;
   font-size: 14px;
   opacity: 0.8;
+}
+
+@media (max-width: 768px) {
+  #topbar {
+    flex-direction: column;
+  }
+  #search-wrapper {
+    display: none;
+  }
+  footer {
+    width: 100%;
+    background-color: #1c1b1e;
+    display: flex;
+    flex-direction: column;
+  }
 }
