--- a/index.css
+++ b/index.css
@@ -2,7 +2,6 @@
   width: 100%;
   margin: 0 80px;
 }
-
 .slick-dots {
   list-style-type: none;
   width: 100%;
@@ -11,6 +10,13 @@
   margin: 0 auto;
 }
 
+.center {
+  width: 100%;
+}
+.center img {
+  width: 100%;
+  height: auto;
+}
 .slick-dots li {
   display: inline-block;
 }
@@ -33,11 +39,6 @@
 .slick-active button {
   background-color: #aaa;
 }
-
-/* SLICK STYLES END */
-
-/* PRODUCT STYLES */
-
 .homepage-section {
   padding: 4% 8% 0;
 }
@@ -50,13 +51,13 @@
 
 .product-grid {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
 .product-card {
-  width: 100%;
-  max-width: 19%;
+  width: 250px;
+  max-width: 80%;
   margin-left: 0.5%;
   margin-right: 0.5%;
   margin-bottom: 16px;
